<resources>
    <string name="app_name">Simple Golf Marker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="minus_sign">-</string>
    <string name="add_sign">+</string>
    <string name="previous_hole">Previous Hole</string>
    <string name="next_hole">Next Hole</string>
    <string name="hole">Hole</string>
    <string name="_2">2</string>
    <string name="save">Save</string>
</resources>
