<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="false"
    tools:context=".GameActivity">

    <EditText
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/_2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_2"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/minus"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:onClick="@string/new_game"
        android:text="@string/minus_sign"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <Button
        android:id="@+id/add"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="@string/add_sign"
        app:layout_constraintBottom_toBottomOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/score" />


</androidx.constraintlayout.widget.ConstraintLayout>