<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreForOneHole">

    <TextView
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Hole"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/holeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText3" />

    <TextView
        android:id="@+id/score"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="2"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holeNumber" />

    <Button
        android:id="@+id/minus"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:onClick="@string/new_game"
        android:text="@string/minus_sign"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <Button
        android:id="@+id/add"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="@string/add_sign"
        app:layout_constraintBottom_toBottomOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minus" />

    <Button
        android:id="@+id/previousHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_hole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/nextHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_hole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previousHole"
        app:layout_constraintTop_toTopOf="@+id/previousHole" />

</androidx.constraintlayout.widget.ConstraintLayout>